--- a/Conductivity/rho.ipynb
+++ b/Conductivity/rho.ipynb
@@ -334,6 +334,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#kanthal théorique data\n",
+    "\n",
+    "T_K =[]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
